fixing packager issue

--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -10,3 +10,5 @@ env:
   - SKIP_INIT=yes
 before_precompile: packaging/before_precompile
 after_install: packaging/post_install
+after:
+  - rm -rf vendor/bundle/ruby/2.2.0/gems/rb-fsevent-0.9.5/spec
